# e-paper-dashboard

./: .env.example  .gitignore  Cargo.toml  README.md
.cargo/: config
src/: config.rs  covid_types.rs  dashboard.rs  display.rs  image.rs  lib.rs  main.rs  weather_types.rs
src/module/: covid.rs  date.rs  mod.rs  sysinfo.rs  weather.rs
