[package]
name = "e-paper-dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
dotenv = "0.15"
embedded-graphics = "0.7"
embedded-hal = "0.2"
epd-waveshare = { git = "https://github.com/PhiliPdB/epd-waveshare", branch = "fix/epd2in7b-tricolor" }
image = "0.23"
imageproc = "0.22"
linux-embedded-hal = "0.3"
local-ip-address = "0.4"
profont = "0.5"
rppal = { version = "0.13", features = ["hal-unproven"] }
serde = { version = "1.0", features = ["derive"] }
structopt = { version = "0.3", default-features = false }
sysinfo = "0.22"
ureq = { version = "2.4", features = ["json"] }
